# cosmwasm_template

./: .gitignore  Cargo.toml  Dockerfile.rust  Dockerfile.wasmd  Makefile  README.md  rustfmt.toml
.cargo/: config
docker_rust/: info_to_stdout.bash  rustup_fix_test.bash  rustup_output_sample.bash
docker_wasmd/: info_to_stdout.bash
examples/: schema.rs
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  utils.rs
tests/: integration.rs
